# gohighlevel-mcp-server

./: .dockerignore  .env  .env.example  ATUALIZAR-V2.md  CRIAR-NODE-N8N.md  DEPLOY-EASYPANEL.md  Dockerfile  GUIA-SIMPLES-NODE.md  GUIA-VENDAS.md  GUIA_N8N_MCP_LEIGO.md  INSTALACAO-CLIENTE-V2.md  INSTALACAO-CLIENTE.md  INSTALACAO-INICIANTE.md  N8N-SETUP.md  NODE-COMPLETO-COPIAR-COLAR.md  README.md  TELEGRAM-BOT-SETUP.md  TELEGRAM-SETUP.md  claude_desktop_config_example.json  criar-node-n8n.bat  criar_projeto.bat  mcp_functions.py  mcp_functions_new.py  mcp_n8n_server.py  mcp_server_http.py  mcp_server_http_v2.py  n8n-mcp-config.json  pyproject.toml  requirements.txt  start_bot.bat  start_bot_hidden.vbs  telegram_bot.py  workflow-template-ghl-mcp.json
gohighlevel_mcp/: __init__.py  client.py  server.py
n8n-workflows/: GHL-MCP-Base.json  GHL-MCP-v2-Client.json  ghl-appointment-automation.json  ghl-contact-management.json  ghl-opportunity-pipeline.json
tests/: __init__.py  test_client.py
